--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,16 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+.pylint.d
 
-# Other files and folders
-.settings/
+__pycache__
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
+#Dataset
+datasets
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+flickr30
+
+streamlit_app
+
+#test videos
+videos
+
+demo
+
